[tool.poetry]
name = "cipher_xl3005"
version = "0.1.0"
description = "Python package that contains the cipher function."
authors = ["Xingchen Li"]
license = "MIT"
readme = "README.md"
documentation = 'https://cipher-xl3005.readthedocs.io/en/latest/'
homepage = "https://github.com/QMSS-G5072-2021/cipher_li_xingchen"
repository = "https://github.com/QMSS-G5072-2021/cipher_li_xingchen"

[tool.poetry.dependencies]
python = "^3.9.7"
autoapi = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
